# Poker-Project

./: README.md
equity-poker/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test_game
equity-poker/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
equity-poker/frontend/src/: main.jsx  styles.css
equity-poker/frontend/src/app/: App.jsx  AppErrorBoundary.jsx  routes.jsx
equity-poker/frontend/src/components/common/: ConnectionBanner.jsx  Toasts.jsx
equity-poker/frontend/src/components/controls/: ActionBar.jsx  MuckShowPanel.jsx  RebuyModal.jsx
equity-poker/frontend/src/components/game/: Board.jsx  CardFace.jsx  Pot.jsx  Seat.jsx  TableView.jsx
equity-poker/frontend/src/components/intro/: IntroScreen.jsx
equity-poker/frontend/src/components/lobby/: ChatPanel.jsx  EquityPanel.jsx  HostControls.jsx  LobbyView.jsx  SpectatorPanel.jsx
equity-poker/frontend/src/hooks/: useGameSocket.js  useSocketLifecycle.js
equity-poker/frontend/src/lib/: cardLabel.js  storage.js
equity-poker/frontend/src/network/: wsClient.js
equity-poker/frontend/src/store/: selectors.js  useGameStore.js
equity-poker/src/: main.cpp
equity-poker/src/engine/: Game.cpp  Game.h  Player.cpp  Player.h
equity-poker/src/poker/: Card.cpp  Card.h  Deck.cpp  Deck.h  EquityCalculator.cpp  EquityCalculator.h  Evaluator.cpp  Evaluator.h  EvaluatorConstants.cpp  EvaluatorConstants.h
equity-poker/src/server/: Game.cpp  Game.h  GameServer.cpp  Lobby.cpp  Lobby.h  Player.h
equity-poker/tests/: TestDeck.cpp  TestEquity.cpp  TestGame.cpp  TestLobby.cpp
